infrastructure/configs/development/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-httproute
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - longhorn.local.nishantlabs.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
